hphp/hack/test/typecheck/const_attribute/redeclare_to_const_in_trait.php.like_types.exp
File "redeclare_to_const_in_trait.php", line 6, characters 7-7:
Class D does not correctly implement all required members  (Typing[4340])
File "redeclare_to_const_in_trait.php", line 6, characters 17-17:
Some members are incompatible with those declared in type C
Read the following to see why:
File "redeclare_to_const_in_trait.php", line 4, characters 21-23:
This property is not __Const
File "redeclare_to_const_in_trait.php", line 5, characters 30-32:
This property is __Const
